--- a/index2.html
+++ b/index2.html
@@ -161,35 +161,35 @@
                 <span>Double check everything looks Ok before confirming</span>
             </div>
             <div class="Confirm">
-                <div class="PlanInfo">
-                    <div class="">
+                <div class="PlanInfo" id="PlanInfo">
+                    <!-- <div class="">
                         <h4>Arcade (Monthly)</h4>
                         <span class="change">Change</span>
                     </div>
                     <div class="">
                         <span class="price">$9/mo</span>
-                    </div>
+                    </div> -->
                 </div>
                 <hr>
-                <div class="GetService">
-                    <div class="Serv">
+                <div class="GetService" id="GetService">
+                    <!-- <div class="Serv">
                         <h5>Online servive</h5>
                         <span>+$1/mo</span>
                     </div>
                     <div class="Serv">
                         <h5>Larger Storage</h5>
                         <span>+$2/mo</span>
-                    </div>
+                    </div> -->
                 </div>
             </div>
-            <div class="Total">
-                <h5>Total (per month)</h5>
-                <span class="TotalPrice">+$12/mo</span>
+            <div class="Total" id="Total">
+                <!-- <h5>Total (per month)</h5>
+                <span class="TotalPrice">+$12/mo</span> -->
             </div>
             <a class="bk">Back</a>
-            <button class="NS">Confirm</button>
+            <button class="NS" onclick="Finish()">Confirm</button>
         </div>
-        <div class="ThankYouStepInfo">
+        <div class="ThankYouStepInfo" id="Finish">
             <img src="/assets/images/icon-thank-you.svg" alt="">
             <h1>Thank you !</h1>
             <p>Thanks for confirming your subscription! We hope you have Fun using our platform .If you ever need support
