--- a/index.html
+++ b/index.html
@@ -1,126 +1,204 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Multi-step form</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Multi-step form</title>
 </head>
 <body>
+    <div class="Container">
+        <div class="Steps">
+            <div class="Step First">
+                <span class="activeStep">1</span>
+                <div class="Step1">
+                    <h5>Step 1</h5>
+                    <h6>Your Info</h6>
+                </div>
+            </div>
+            <div class="Step Second">
+                <span>2</span>
+                <div class="Step2">
+                    <h5>Step 2</h5>
+                    <h6>Select Plan</h6>
+                </div>
+            </div>
+            <div class="Step Third">
+                <span>3</span>
+                <div class="Step3">
+                    <h5>Step 3</h5>
+                    <h6>Addon-Ons</h6>
 
-  <!-- Sidebar start -->
+                </div>
+            </div>
+            <div class="Step Forth">
+                <span>4</span>
+                <div class="Step4">
+                    <h5>Step 4</h5>
+                    <h6>Summary</h6>
+                </div>
+            </div>
+        </div>
+        <div class="FirstStepInfo" id="StepOne">
+            <div class="Title">
+                <h1>Personal Info</h1>
+                <span>Please provide your name , email adresse , and phone number</span>
+            </div>
+            <div id="ErrMsg">
+                <!-- <h4>Error Msg</h4> -->
+            </div>
+            <form class="Inputs">
+                <div class="Ipn">
+                    <label for="">Name</label>
+                    <input id="Name" type="text" placeholder="e.g Stephen King">
+                </div>
+                <div class="Ipn">
+                    <label for="">Email Adresse</label>
+                    <input id="Mail" type="text" placeholder="e.g StephenKing@gmail.com">
+                </div>
+                <div class="Ipn">
+                    <label for="">Phone Number</label>
+                    <input id="Phone" type="text" placeholder="e.g +1 234 567 890">
+                </div>
+                <button type="submit" onclick="Submit()">Next Step</button>
 
-  Step 1
-  Your info
-
-  Step 2
-  Select plan
-
-  Step 3
-  Add-ons
-
-  Step 4
-  Summary
-
-  <!-- Sidebar end -->
-
-  <!-- Step 1 start -->
-
-  Personal info
-  Please provide your name, email address, and phone number.
-
-  Name
-  e.g. Stephen King
-
-  Email Address
-  e.g. stephenking@lorem.com
-
-  Phone Number
-  e.g. +1 234 567 890
-
-  Next Step
-
-  <!-- Step 1 end -->
-
-  <!-- Step 2 start -->
-
-  Select your plan
-  You have the option of monthly or yearly billing.
-
-  Arcade
-  $9/mo
-
-  Advanced
-  $12/mo
-
-  Pro
-  $15/mo
-
-  Monthly
-  Yearly
-
-  Go Back
-  Next Step
-
-  <!-- Step 2 end -->
-
-  <!-- Step 3 start -->
-
-  Pick add-ons
-  Add-ons help enhance your gaming experience.
-
-  Online service
-  Access to multiplayer games
-  +$1/mo
-
-  Larger storage
-  Extra 1TB of cloud save
-  +$2/mo
-
-  Customizable Profile
-  Custom theme on your profile
-  +$2/mo
-
-  Go Back
-  Next Step
-
-  <!-- Step 3 end -->
-
-  <!-- Step 4 start -->
-
-  Finishing up
-  Double-check everything looks OK before confirming.
-
-  <!-- Dynamically add subscription and add-on selections here -->
-
-  Total (per month/year)
-
-  Go Back
-  Confirm
-
-  <!-- Step 4 end -->
-
-  <!-- Step 5 start -->
-
-  Thank you!
-
-  Thanks for confirming your subscription! We hope you have fun 
-  using our platform. If you ever need support, please feel free 
-  to email us at support@loremgaming.com.
-
-  <!-- Step 5 end -->
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+            </form>
+        </div>
+        <div class="SecondStepInfo" id="StepTwo">
+            <div class="Title">
+                <h1>Select your plan</h1>
+                <span>You have the option of monthly or yearly biling.</span>
+            </div>
+            <div id="ErrMsg">
+                <!-- <h4>Error Msg</h4> -->
+            </div>
+            <div class="Options" id="Options">
+                <!-- <div class="Opt">
+                    <input type="radio" id="Arcade" name="T">
+                    <div class="OPPT">
+                        <img src="/assets/images/icon-arcade.svg" alt="">
+                        <label for="Arcade">Arcade</label>
+                        <span>$9/mo</span>
+                    </div>
+                </div>
+                <div class="Opt">
+                    <input type="radio" id="Advanced" name="T">
+                    <div class="OPPT">
+                        <img src="/assets/images/icon-advanced.svg" alt="">
+                        <label for="Advanced">Advanced</label>
+                        <span>$9/mo</span>
+                    </div>
+                </div>
+                <div class="Opt">
+                    <input type="radio" id="Pro" name="T">
+                    <div class="OPPT">
+                        <img src="/assets/images/icon-pro.svg" alt="">
+                        <label for="Pro">Pro</label>
+                        <span>$9/mo</span>
+                    </div>
+                </div> -->
+            </div>
+            <div class="MY">
+                <div class="MO_YR">
+                    <h3>Monthly</h3>
+                    <div class="Btn_Mo_Yr" id="MY" data-value="Monthly">
+                        <div class="circle" id="circel">
+                            
+                        </div>
+                    </div>
+                    <h3>Yearly</h3>
+                </div>
+            </div>
+            <a class="bk">Back</a>
+            <button class="NS" onclick="getPlan()">Next Step</button>
+        </div>
+        <div class="ThirdtStepInfo" id="StepThree">
+            <div class="Title">
+                <h1>Pick add-ons</h1>
+                <span>Add-ons help enhance your gaming experience.</span>
+            </div>
+            <div class="Servicess" id="ServiceClass">
+                <!-- <input type="checkbox" name="" id="sv1">
+                <label for="sv1" class="Service Online">
+                    <div class="ServiceInput">
+                        <div class="Text">
+                            <h4>Online Services</h4>
+                            <span>Acces to multiplayer games</span>
+                        </div>
+                    </div>
+                    <div>
+                        <span>+$1/mo</span>
+                    </div>
+                </label>
+                <input type="checkbox" name="" id="sv2">
+                <label for="sv2" class="Service Storage">
+                    <div class="ServiceInput">
+                        <div class="Text">
+                            <h4>Larger Storage</h4>
+                            <span>Extra 1TB of cloud save</span>
+                        </div>
+                    </div>
+                    <div>
+                        <span>+$2/mo</span>
+                    </div>
+                </label>
+                <input type="checkbox" name="" id="sv3">
+                <label for="sv3" class="Service Profile">
+                    <div class="ServiceInput">
+                        <div class="Text">
+                            <h4>Customizalbe Profile</h4>
+                            <span>Custom theme on your profile</span>
+                        </div>
+                    </div>
+                    <div>
+                        <span>+$2/mo</span>
+                    </div>
+                </label> -->
+            </div>
+            <a class="bk">Back</a>
+            <button class="NS" onclick="getServices()">Next Step</button>
+        </div>
+        <div class="forthtStepInfo" id="StepFor">
+            <div class="Title">
+                <h1>Finishinf up</h1>
+                <span>Double check everything looks Ok before confirming</span>
+            </div>
+            <div class="Confirm">
+                <div class="PlanInfo" id="PlanInfo">
+                    <!-- <div class="">
+                        <h4>Arcade (Monthly)</h4>
+                        <span class="change">Change</span>
+                    </div>
+                    <div class="">
+                        <span class="price">$9/mo</span>
+                    </div> -->
+                </div>
+                <hr>
+                <div class="GetService" id="GetService">
+                    <!-- <div class="Serv">
+                        <h5>Online servive</h5>
+                        <span>+$1/mo</span>
+                    </div>
+                    <div class="Serv">
+                        <h5>Larger Storage</h5>
+                        <span>+$2/mo</span>
+                    </div> -->
+                </div>
+            </div>
+            <div class="Total" id="Total">
+                <!-- <h5>Total (per month)</h5>
+                <span class="TotalPrice">+$12/mo</span> -->
+            </div>
+            <a class="bk">Back</a>
+            <button class="NS" onclick="Finish()">Confirm</button>
+        </div>
+        <div class="ThankYouStepInfo" id="Finish">
+            <img src="/assets/images/icon-thank-you.svg" alt="">
+            <h1>Thank you !</h1>
+            <p>Thanks for confirming your subscription! We hope you have Fun using our platform .If you ever need support
+            , please feel Free to email us at support support@lorem.com</p>
+        </div>
+    </div>
+    <script src="main.js"></script>
 </body>
 </html>
