--- a/index.html
+++ b/index.html
@@ -44,9 +44,6 @@
                 <h1>Personal Info</h1>
                 <span>Please provide your name , email adresse , and phone number</span>
             </div>
-            <div id="ErrMsg">
-                <!-- <h4>Error Msg</h4> -->
-            </div>
             <form class="Inputs">
                 <div class="Ipn">
                     <label for="">Name</label>
@@ -69,34 +66,9 @@
                 <h1>Select your plan</h1>
                 <span>You have the option of monthly or yearly biling.</span>
             </div>
-            <div id="ErrMsg">
-                <!-- <h4>Error Msg</h4> -->
-            </div>
             <div class="Options" id="Options">
-                <!-- <div class="Opt">
-                    <input type="radio" id="Arcade" name="T">
-                    <div class="OPPT">
-                        <img src="/assets/images/icon-arcade.svg" alt="">
-                        <label for="Arcade">Arcade</label>
-                        <span>$9/mo</span>
-                    </div>
-                </div>
-                <div class="Opt">
-                    <input type="radio" id="Advanced" name="T">
-                    <div class="OPPT">
-                        <img src="/assets/images/icon-advanced.svg" alt="">
-                        <label for="Advanced">Advanced</label>
-                        <span>$9/mo</span>
-                    </div>
-                </div>
-                <div class="Opt">
-                    <input type="radio" id="Pro" name="T">
-                    <div class="OPPT">
-                        <img src="/assets/images/icon-pro.svg" alt="">
-                        <label for="Pro">Pro</label>
-                        <span>$9/mo</span>
-                    </div>
-                </div> -->
+                <!-- Options -->
+
             </div>
             <div class="MY">
                 <div class="MO_YR">
@@ -118,42 +90,8 @@
                 <span>Add-ons help enhance your gaming experience.</span>
             </div>
             <div class="Servicess" id="ServiceClass">
-                <!-- <input type="checkbox" name="" id="sv1">
-                <label for="sv1" class="Service Online">
-                    <div class="ServiceInput">
-                        <div class="Text">
-                            <h4>Online Services</h4>
-                            <span>Acces to multiplayer games</span>
-                        </div>
-                    </div>
-                    <div>
-                        <span>+$1/mo</span>
-                    </div>
-                </label>
-                <input type="checkbox" name="" id="sv2">
-                <label for="sv2" class="Service Storage">
-                    <div class="ServiceInput">
-                        <div class="Text">
-                            <h4>Larger Storage</h4>
-                            <span>Extra 1TB of cloud save</span>
-                        </div>
-                    </div>
-                    <div>
-                        <span>+$2/mo</span>
-                    </div>
-                </label>
-                <input type="checkbox" name="" id="sv3">
-                <label for="sv3" class="Service Profile">
-                    <div class="ServiceInput">
-                        <div class="Text">
-                            <h4>Customizalbe Profile</h4>
-                            <span>Custom theme on your profile</span>
-                        </div>
-                    </div>
-                    <div>
-                        <span>+$2/mo</span>
-                    </div>
-                </label> -->
+                                <!-- Servives -->
+
             </div>
             <a class="bk">Back</a>
             <button class="NS" onclick="getServices()">Next Step</button>
@@ -165,29 +103,18 @@
             </div>
             <div class="Confirm">
                 <div class="PlanInfo" id="PlanInfo">
-                    <!-- <div class="">
-                        <h4>Arcade (Monthly)</h4>
-                        <span class="change">Change</span>
-                    </div>
-                    <div class="">
-                        <span class="price">$9/mo</span>
-                    </div> -->
+                <!-- PlanInfo -->
+
                 </div>
                 <hr>
                 <div class="GetService" id="GetService">
-                    <!-- <div class="Serv">
-                        <h5>Online servive</h5>
-                        <span>+$1/mo</span>
-                    </div>
-                    <div class="Serv">
-                        <h5>Larger Storage</h5>
-                        <span>+$2/mo</span>
-                    </div> -->
+                <!-- PlanInfo -->
+
                 </div>
             </div>
             <div class="Total" id="Total">
-                <!-- <h5>Total (per month)</h5>
-                <span class="TotalPrice">+$12/mo</span> -->
+                <!-- total -->
+                >
             </div>
             <a class="bk">Back</a>
             <button class="NS" onclick="Finish()">Confirm</button>
