Imgs not showing

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <button class="NS" onclick="Finish()">Confirm</button>
         </div>
         <div class="ThankYouStepInfo" id="Finish">
-            <img src="/assets/images/icon-thank-you.svg" alt="">
+            <img src="./assets/images/icon-thank-you.svg" alt="">
             <h1>Thank you !</h1>
             <p>Thanks for confirming your subscription! We hope you have Fun using our platform .If you ever need support
             , please feel Free to email us at support support@lorem.com</p>
